Bump agrona and gradle to latest